--- a/new_config/moonraker.conf
+++ b/new_config/moonraker.conf
@@ -57,3 +57,10 @@ origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
 managed_services: klipper
 primary_branch: main
 
+[update_manager vzbot]
+type: git_repo
+managed_services: vzbot
+origin: https://github.com/keefo/vzbot.git
+path: /home/lianxu/vzbot
+primary_branch: main
+
