--- a/new_config/led.cfg
+++ b/new_config/led.cfg
@@ -1,5 +1,5 @@
 # [neopixel my_led]
-# pin: rpi:gpio10
+# pin: rpi:gpio10 pi mcu can not handle timing based led light
 # chain_count: 96
 # color_order: GRBW  # or RGBW, GRB, etc. depending on your LED
 # initial_red: 0.0
@@ -7,21 +7,11 @@
 # initial_blue: 0.0
 # initial_white: 0.0
 
-# [gcode_shell_command SET_LED_CFG]
-# command = python3 /home/lianxu/led/set_config.py "{KEY}" "{VALUE}"
-# timeout = 5.0
-
-# [gcode_macro SET_LED_CFG]
-# variable_led_config: ""  # Default empty string
-# gcode:
-#     # Capture the string passed as CONFIG
-#     {% set cfg = params.CONFIG|string %}
-#     SET_GCODE_VARIABLE MACRO=SET_LED_CFG VARIABLE=led_config value='"{cfg}"'
-#     RESPOND MSG="LED set to: {cfg}"
 
 [gcode_shell_command LED_SET]
 command = python3 /home/lianxu/vzbot/led/set_config.py
 timeout = 5.0
+verbose: True
 
 [gcode_macro LED_DEMO]
 gcode:
@@ -70,24 +60,12 @@ gcode:
 [gcode_macro LED_BRIGHTNESS_100]
 gcode:
     RUN_SHELL_COMMAND CMD=LED_SET PARAMS="brightness=1.0"
-    
-# [gcode_macro LED_SUNSET]
-# gcode:
-#     RUN_SHELL_COMMAND CMD=LED_SET PARAMS=sunset
 
-# [gcode_macro LED_PULSE]
-# gcode:
-#     RUN_SHELL_COMMAND CMD=LED_SET PARAMS=pulse
+[gcode_macro LED_XMAS]
+gcode:
+    RUN_SHELL_COMMAND CMD=LED_SET PARAMS="pattern=xmas"
 
-# [gcode_macro LED_SOLID]
-# gcode:
-#     SET_LED_CFG CONFIG=solid
-
-# [gcode_macro LED_PROGRESS]
-# gcode:
-#     SET_LED_CFG CONFIG=progress
-
-# [gcode_macro LED_PROGRESS_BLUE_TO_RED]
-# gcode:
-#     SET_LED_CFG CONFIG=progress_blue_to_red
+[gcode_macro LED_SUNSET]
+gcode:
+    RUN_SHELL_COMMAND CMD=LED_SET PARAMS="pattern=sunset"
 
