--- a/new_config/printer.cfg
+++ b/new_config/printer.cfg
@@ -280,9 +280,9 @@ resolution: 0.1
 [force_move]
 enable_force_move: true
 
-# [firmware_retraction]
-# retract_length: 1.3
-# retract_speed: 45
+[firmware_retraction]
+retract_length: 0.8
+retract_speed: 45
 # unretract_extra_length: 0
 # unretract_speed: 30
 
