--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -48,8 +48,9 @@ gcode:
       {% set HI_BED_TEMP = BED_TEMP %}
     {% endif %}
 
-    G28     ; home axes
-    G0 Z2   ; position beacon at 2mm for heat soak
+    G28          ; home axes
+    G0 Z2        ; position beacon at 2mm for heat soak
+    G0 X20 Y20
 
     RESPOND MSG="Current chamber temp: {current_chamber_temp}℃"
     RESPOND MSG="Current bed temp: {current_bed_temp}℃"
@@ -136,6 +137,8 @@ gcode:
     G90                              ; absolute positioning
     G0 X{max_x / 2} Y{max_y - 5} Z{display_z} F2500   ; park nozzle at rear with Z at display height
     M84
+
+    SET_FAN_SPEED FAN=RSCS SPEED=0
     
     RESPOND MSG="Finished!"
 
