--- a/new_config/led.cfg
+++ b/new_config/led.cfg
@@ -69,3 +69,11 @@ gcode:
 gcode:
     RUN_SHELL_COMMAND CMD=LED_SET PARAMS="pattern=sunset"
 
+[gcode_macro LED_Turquoise]
+gcode:
+    RUN_SHELL_COMMAND CMD=LED_SET PARAMS="pattern=0x00EEEE white=0x22"
+
+[gcode_macro LED_OrangeTeal]
+gcode:
+    RUN_SHELL_COMMAND CMD=LED_SET PARAMS="pattern=orangeteal"
+
