--- a/new_config/printer.cfg
+++ b/new_config/printer.cfg
@@ -308,6 +308,7 @@ max_temp: 150
 
 [verify_heater heater_bed] 
 check_gain_time: 90
+heating_gain: 1
 
 [temperature_fan raspberry_pi]
 # pi fan - In FAN2
@@ -424,7 +425,7 @@ min_speed: 0.0
 # tachometer_ppr: 2
 
 # [heater_fan heatsink_pump]
-# ## Hotend Fan - FAN0 Connector
+# ##    Hotend Fan - FAN0 Connector
 # ## in case of a watercooler that is 24V use a Heater Pin like PF7 Heat3 for a larger mosfet that can handle more amps.
 # pin: PF7  # water pump motor
 # max_power: 1.0
@@ -542,7 +543,7 @@ shutdown_value:1
 ########################
 
 [fan]
-## Print Cooling Fan - PF8
+##  Print Cooling Fan - PF8
 max_power: 1.0
 cycle_time: 0.005
 shutdown_speed: 0
@@ -569,7 +570,6 @@ gcode =
     TURN_OFF_HEATERS
     #M84
   {% endif %}
-
 
 ################################################################################################
 ##                                        Probe                                               ##
