--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -23,77 +23,173 @@
 #     G90  ; Absolute positioning
 #     G1 X5 Y5 Z2 F3000  ; Move back to home or another safe position (adjust as needed)
 
-
 [gcode_macro PRINT_START]
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(100)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
     {% set Z_OFFSET = params.Z_OFFSET|default(0)|float %}
-    {% set max_wait_seconds = params.MAX_WAIT|default(20)|int %}  # Default to 5 minutes if not specified
+    {% set MAX_WAIT = params.MAX_WAIT|default(0)|int %}
+    {% set BED_SOAK_TIME = params.BED_SOAK_TIME|default(0)|int %}  # Default 2-minute soak for cold bed
+    {% set COLD_BED_THRESHOLD = 40 %}  # Bed is "cold" if below 40°C
+    {% set HOT_BED_SOAK_TIME = 0 %}   # Short soak time (1 minute) for hot bed
+    {% set HIGH_BED_TEMP = 110 %}      # Higher temp for cold bed heating
 
-    # Get the current bed temperature
+    # Get the current bed and chamber temperatures
     {% set current_bed_temp = printer['temperature_sensor bed'].temperature|float|round(1) if 'temperature_sensor bed' in printer 
-             else printer.heater_bed.temperature|float|round(1) %} ; get actual temp from extra sensor or heater sensor
-    {% set current_chamber_temp = printer['temperature_sensor chamber'].temperature|float|round(1) %} 
-    
-    {% if current_bed_temp < 34 %}
-      {% set HI_BED_TEMP = 110 %}
+             else printer.heater_bed.temperature|float|round(1) %}
+    {% set current_chamber_temp = printer['temperature_sensor chamber'].temperature|float|round(1) if 'temperature_sensor chamber' in printer 
+             else 25.0 %}  # Assume 25°C if no chamber sensor
+
+    # Determine bed sensor for TEMPERATURE_WAIT
+    {% set bed_sensor = 'temperature_sensor bed' if 'temperature_sensor bed' in printer else 'heater_bed' %}
+
+    # Determine target bed temperature and soak time
+    {% if current_bed_temp < COLD_BED_THRESHOLD or current_chamber_temp < 32 %}
+      {% set TARGET_BED_TEMP = HIGH_BED_TEMP %}
+      {% set SOAK_TIME = BED_SOAK_TIME %}
+      {% set COOL_DOWN = true %}
+    {% else %}
+      {% set TARGET_BED_TEMP = BED_TEMP %}
+      {% set SOAK_TIME = HOT_BED_SOAK_TIME %}
+      {% set COOL_DOWN = false %}
     {% endif %}
 
-    {% if current_chamber_temp < 32 %}
-      {% set HI_BED_TEMP = 110 %}
-    {% endif %}
+    # Reset extruder multiplier
+    M221 S100
     
-    {% if current_chamber_temp > 40 %}
-      {% set HI_BED_TEMP = BED_TEMP %}
-    {% endif %}
-
+    # Home axes and position for heat soak
     G28          ; home axes
-    G0 Z2        ; position beacon at 2mm for heat soak
-    G0 X20 Y20
+    G0 Z10       ; move to Z=10mm for heat soak (safe height)
+    G0 X20 Y20   ; move to safe position
 
+    # Send status messages
     RESPOND MSG="Current chamber temp: {current_chamber_temp}℃"
     RESPOND MSG="Current bed temp: {current_bed_temp}℃"
-    RESPOND MSG="Heating bed temp: {BED_TEMP}℃"
-    RESPOND MSG="Heating hotend temp: {EXTRUDER_TEMP}℃"
+    RESPOND MSG="Target bed temp: {BED_TEMP}℃"
+    RESPOND MSG="Heating bed to: {TARGET_BED_TEMP}℃"
+    RESPOND MSG="Heating hotend to: {EXTRUDER_TEMP}℃"
     
-    # start chamber fan
+    # Start chamber fan
     SET_FAN_SPEED FAN=Exhaust_fan SPEED=1.0
+    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=1.0
     
-    # Set and wait for nozzle to reach temperature
+    # Heat bed to target temperature
+    M190 S{TARGET_BED_TEMP|int}
+    
+    # If bed was cold, wait for it to cool to BED_TEMP and soak
+    {% if SOAK_TIME > 0 %}
+      {% if COOL_DOWN %}
+        RESPOND MSG="Bed heated to {TARGET_BED_TEMP}℃. Cooling to {BED_TEMP}℃ and soaking for {SOAK_TIME} seconds."
+        G4 S{SOAK_TIME|int}  ; Additional soak time after cooling
+        RESPOND MSG="Soaking finished."
+        M190 S{BED_TEMP|int}
+      {% else %}
+        RESPOND MSG="Bed already hot. Soaking for {SOAK_TIME} seconds."
+        G4 S{SOAK_TIME|int}  ; Short soak for hot bed
+        RESPOND MSG="Soaking finished."
+      {% endif %}
+    {% endif %}
+    
+    # Heat extruder
     M109 S{EXTRUDER_TEMP}
-    M190 S{BED_TEMP|int}
 
-    # RESPOND MSG="Wait chamber temp to reach: 38℃..."
-    # TEMPERATURE_WAIT SENSOR='temperature_sensor chamber' MINIMUM=35 MAXIMUM=50; 
-    # RESPOND MSG="Chamber temp reach: 38℃"
-    RESPOND MSG="Wait {max_wait_seconds} seconds."
-    G4 PS{max_wait_seconds*1000|int}
+    # Wait additional time if specified
+    {% if MAX_WAIT > 0 %}
+      RESPOND MSG="Wait {MAX_WAIT} seconds."
+      G4 S{MAX_WAIT|int}
+    {% endif %}
 
+    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
+    # Bed mesh and calibration
     BED_MESH_CLEAR
     BED_MESH_PROFILE LOAD="default"
-
     G28 Z METHOD=CONTACT CALIBRATE=0
-    #BED_MESH_CALIBRATE RUNS=2           ; bed mesh in scan mode
-    #G28 Z METHOD=CONTACT CALIBRATE=0    ; calibrate z offset only after tilt/mesh
-
-    # BED_MESH_CALIBRATE ADAPTIVE=1
-    # BED_MESH_CALIBRATE
-    # G1 X10 Y10 Z3.0 F3000
+    RESPOND MSG="Applying Z_OFFSET: {Z_OFFSET}mm"
     SET_GCODE_OFFSET Z={Z_OFFSET}
 
+    # Prepare for printing
     Smart_Park
-    # RESPOND MSG="Poop..."
-    # G1 Z21.0 F600
-    # G92 E0 
-    # G1 E25 F1200.0 ; poop
-    # CLEAN_NOZZLE
-
     RESPOND MSG="Draw adaptive purge line"
-    # LINE_PURGE
     VORON_PURGE
     
     RESPOND MSG="Printing start."
+
+    
+# [gcode_macro PRINT_START]
+# gcode:
+#     {% set BED_TEMP = params.BED_TEMP|default(100)|float %}
+#     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+#     {% set Z_OFFSET = params.Z_OFFSET|default(0)|float %}
+#     {% set max_wait_seconds = params.MAX_WAIT|default(20)|int %}  # Default to 5 minutes if not specified
+
+#     # Get the current bed temperature
+#     {% set current_bed_temp = printer['temperature_sensor bed'].temperature|float|round(1) if 'temperature_sensor bed' in printer 
+#              else printer.heater_bed.temperature|float|round(1) %} ; get actual temp from extra sensor or heater sensor
+#     {% set current_chamber_temp = printer['temperature_sensor chamber'].temperature|float|round(1) %} 
+    
+#     {% if current_bed_temp < 34 %}
+#       {% set HI_BED_TEMP = 110 %}
+#     {% endif %}
+
+#     {% if current_chamber_temp < 32 %}
+#       {% set HI_BED_TEMP = 110 %}
+#     {% endif %}
+    
+#     {% if current_chamber_temp > 40 %}
+#       {% set HI_BED_TEMP = BED_TEMP %}
+#     {% endif %}
+
+#     # reset extruder multipler
+#     M221 S100
+    
+#     # EXCLUDE_OBJECT_DEFINE
+    
+#     G28          ; home axes
+#     G0 Z2        ; position beacon at 2mm for heat soak
+#     G0 X20 Y20
+
+#     RESPOND MSG="Current chamber temp: {current_chamber_temp}℃"
+#     RESPOND MSG="Current bed temp: {current_bed_temp}℃"
+#     RESPOND MSG="Heating bed temp: {BED_TEMP}℃"
+#     RESPOND MSG="Heating hotend temp: {EXTRUDER_TEMP}℃"
+    
+#     # start chamber fan
+#     SET_FAN_SPEED FAN=Exhaust_fan SPEED=1.0
+    
+#     # Set and wait for nozzle to reach temperature
+#     M190 S{BED_TEMP|int}
+#     M109 S{EXTRUDER_TEMP}
+
+#     # RESPOND MSG="Wait chamber temp to reach: 38℃..."
+#     # TEMPERATURE_WAIT SENSOR='temperature_sensor chamber' MINIMUM=35 MAXIMUM=50; 
+#     # RESPOND MSG="Chamber temp reach: 38℃"
+#     RESPOND MSG="Wait {max_wait_seconds} seconds."
+#     G4 PS{max_wait_seconds*1000|int}
+
+#     BED_MESH_CLEAR
+#     BED_MESH_PROFILE LOAD="default"
+
+#     G28 Z METHOD=CONTACT CALIBRATE=0
+#     #BED_MESH_CALIBRATE RUNS=2           ; bed mesh in scan mode
+#     #G28 Z METHOD=CONTACT CALIBRATE=0    ; calibrate z offset only after tilt/mesh
+
+#     # BED_MESH_CALIBRATE ADAPTIVE=1
+#     # BED_MESH_CALIBRATE
+#     # G1 X10 Y10 Z3.0 F3000
+#     SET_GCODE_OFFSET Z={Z_OFFSET}
+
+#     Smart_Park
+#     # RESPOND MSG="Poop..."
+#     # G1 Z21.0 F600
+#     # G92 E0 
+#     # G1 E25 F1200.0 ; poop
+#     # CLEAN_NOZZLE
+
+#     RESPOND MSG="Draw adaptive purge line"
+#     # LINE_PURGE
+#     VORON_PURGE
+    
+#     RESPOND MSG="Printing start."
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script
@@ -138,7 +234,8 @@ gcode:
     G0 X{max_x / 2} Y{max_y - 5} Z{display_z} F2500   ; park nozzle at rear with Z at display height
     M84
 
-    SET_FAN_SPEED FAN=RSCS SPEED=0
+    SET_FAN_SPEED FAN=RSCS SPEED=0    
+    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
     
     RESPOND MSG="Finished!"
 
