--- a/new_config/printer.cfg
+++ b/new_config/printer.cfg
@@ -15,6 +15,7 @@
 [include KAMP_Settings.cfg]
 [include beacon.cfg]
 [include shell_command.cfg]
+[include sound.cfg]
 
 [display_status]
 [exclude_object]
