--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -29,10 +29,10 @@ gcode:
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
     {% set Z_OFFSET = params.Z_OFFSET|default(0)|float %}
     {% set MAX_WAIT = params.MAX_WAIT|default(0)|int %}
-    {% set BED_SOAK_TIME = params.BED_SOAK_TIME|default(0)|int %}  # Default 2-minute soak for cold bed
+    {% set BED_SOAK_TIME = params.BED_SOAK_TIME|default(180)|int %}  # Default 2-minute soak for cold bed
     {% set COLD_BED_THRESHOLD = 40 %}  # Bed is "cold" if below 40°C
     {% set HOT_BED_SOAK_TIME = 0 %}   # Short soak time (1 minute) for hot bed
-    {% set HIGH_BED_TEMP = 110 %}      # Higher temp for cold bed heating
+    # {% set HIGH_BED_TEMP = 110 %}      # Higher temp for cold bed heating
 
     # Get the current bed and chamber temperatures
     {% set current_bed_temp = printer['temperature_sensor bed'].temperature|float|round(1) if 'temperature_sensor bed' in printer 
@@ -45,7 +45,7 @@ gcode:
 
     # Determine target bed temperature and soak time
     {% if current_bed_temp < COLD_BED_THRESHOLD or current_chamber_temp < 32 %}
-      {% set TARGET_BED_TEMP = HIGH_BED_TEMP %}
+      {% set TARGET_BED_TEMP = BED_TEMP %}
       {% set SOAK_TIME = BED_SOAK_TIME %}
       {% set COOL_DOWN = true %}
     {% else %}
@@ -71,7 +71,7 @@ gcode:
     
     # Start chamber fan
     SET_FAN_SPEED FAN=Exhaust_fan SPEED=1.0
-    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=1.0
+    # SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=1.0
     
     # Heat bed to target temperature
     M190 S{TARGET_BED_TEMP|int}
@@ -99,7 +99,7 @@ gcode:
       G4 S{MAX_WAIT|int}
     {% endif %}
 
-    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
+    # SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
     # Bed mesh and calibration
     BED_MESH_CLEAR
     BED_MESH_PROFILE LOAD="default"
@@ -235,7 +235,7 @@ gcode:
     M84
 
     SET_FAN_SPEED FAN=RSCS SPEED=0    
-    SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
+    # SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
     
     RESPOND MSG="Finished!"
 
@@ -776,3 +776,14 @@ gcode:
 	# Restore previous gcode state (absolute/relative, etc)
 	RESTORE_GCODE_STATE NAME=TEST_SPEED
     G0 X115 Y115 Z30
+
+[gcode_macro M600]
+gcode:
+    PAUSE
+    SPEAK MSG="PAUSE. PAUSE. PAUSE."
+
+[gcode_macro M601]
+gcode:
+    PAUSE
+    SPEAK MSG="PAUSE. PAUSE. PAUSE."
+    
