--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -22,6 +22,24 @@
 #     G1 Y10 F1000
 #     G90  ; Absolute positioning
 #     G1 X5 Y5 Z2 F3000  ; Move back to home or another safe position (adjust as needed)
+[gcode_macro RESPOND]
+rename_existing: RESPOND_ORIG
+# toggle speaking without removing the macro
+variable_speak_enable: 1
+gcode:
+  {% set msg = params.MSG|default("") %}
+  {% set type = params.TYPE|default("") %}
+  {% set prefix = params.PREFIX|default("") %}
+
+  # Pass through to the original RESPOND (preserves behavior)
+  RESPOND_ORIG {% if type %}TYPE={type}{% endif %} {% if prefix %}PREFIX={prefix}{% endif %} MSG="{msg}"
+
+  # Also speak it (if enabled)
+  {% if printer["gcode_macro RESPOND"].speak_enable|int %}
+    # Basic sanitizing to avoid quote issues
+    {% set speak_msg = msg|replace('"','') %}
+    SPEAK MSG="{speak_msg}"
+  {% endif %}
 
 [gcode_macro PRINT_START]
 gcode:
