--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -210,52 +210,44 @@ gcode:
 #     RESPOND MSG="Printing start."
 
 [gcode_macro PRINT_END]
-#   Use PRINT_END for the slicer ending script
 gcode:
-    #   Get Boundaries
-    {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
-    {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
-    {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
+  # --- Bounds & current pos ---
+  {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
+  {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
+  {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
+  {% set cur = printer.toolhead.position %}
+  {% set display_z = [300.0, max_z]|min %}
 
-    {% set display_z = ((300, max_z)|min, printer.toolhead.position.z)|max %}
+  # Safe directions for a short wipe move
+  {% set x_safe = 10.0 if cur.x < (max_x - 15.0) else -10.0 %}
+  {% set y_safe = 10.0 if cur.y < (max_y - 15.0) else -10.0 %}
 
-    #   Check end position to determine safe directions to move
-    {% if printer.toolhead.position.x < (max_x - 15) %}
-        {% set x_safe = 10.0 %}
-    {% else %}
-        {% set x_safe = -10.0 %}
-    {% endif %}
+  # How much we still need to climb to the display height; hop at least 5 mm now
+  {% set z_gap = (display_z - cur.z) if (display_z - cur.z) > 0 else 0.0 %}
+  {% set z_hop = [z_gap, 5.0]|max %}
 
-    {% if printer.toolhead.position.y < (max_y - 15) %}
-        {% set y_safe = 10.0 %}
-    {% else %}
-        {% set y_safe = -10.0 %}
-    {% endif %}
+  M400
+  G92 E0
+  G91                                  ; relative
 
-    {% if printer.toolhead.position.z < (display_z - 2) %}
-        {% set z_safe = display_z - printer.toolhead.position.z %}
-    {% else %}
-        {% set z_safe = 0 %}
-    {% endif %}
-    
-    #  Commence PRINT_END
-    M400                             ; wait for buffer to clear
-    G92 E0                           ; zero the extruder
-    G1 E-10.0 F3600                  ; retract
-    G91                              ; relative positioning
-    G0 Z{z_safe} + Z10 F300          ; move nozzle up
-    G0 X{x_safe} Y{y_safe} F2500     ; move nozzle to remove stringing
-    M104 S0                          ; turn off hotend
-    M140 S0                          ; turn off bed
-    M107                             ; turn off fan
-    G90                              ; absolute positioning
-    G0 X{max_x / 2} Y{max_y - 5} Z{display_z} F2500   ; park nozzle at rear with Z at display height
-    M84
+  # Wipe while retracting (total ~10 mm) — reduces tails a lot
+  G1 E-1.0 F4800
+  G1 X{x_safe} Y{y_safe} E-9.0 F9000   ; short wipe + retract
 
-    SET_FAN_SPEED FAN=RSCS SPEED=0    
-    # SET_FAN_SPEED FAN=Bed_bottom_fan SPEED=0.0
-    
-    RESPOND MSG="Finished!"
+  # Fast Z hop (was F300 before = too slow)
+  G1 Z{z_hop} F1800                    ; 30 mm/s (limit by your max_z_velocity)
+
+  G90                                  ; absolute
+  G0 X{max_x/2.0} Y{max_y - 5.0} F15000 ; quick park travel (limit by your VELOCITY)
+  G0 Z{display_z} F1800                ; raise to display height
+
+  M104 S0
+  M140 S0
+  M107
+  M84
+
+  SET_FAN_SPEED FAN=RSCS SPEED=0
+  RESPOND MSG="Finished!"
 
 # [gcode_macro spin_one_stepper]
 # gcode:
