--- a/new_config/beacon.cfg
+++ b/new_config/beacon.cfg
@@ -5,16 +5,16 @@ x_offset: 0        # update with offset from nozzle on your machine
 y_offset: 25       # update with offset from nozzle on your machine
 mesh_main_direction: x
 mesh_runs: 1
-default_probe_method: contact
+default_probe_method: proximity
 contact_max_hotend_temperature: 300 # increase to probe at print temps
-home_xy_position: 150, 150 # update with your bed center
+home_xy_position: 30, 30 # update with your bed center
 home_z_hop: 3
 home_z_hop_speed: 30
 home_xy_move_speed: 150
 home_method: contact # use proximity for induction homing
 home_method_when_homed: proximity # after initial calibration use induction
 home_autocalibrate: unhomed # contact will calibrate beacon on first home
-autocal_tolerance: 0.008
+autocal_tolerance: 0.01
 autocal_max_retries: 50
 
 [resonance_tester]
@@ -29,7 +29,7 @@ adaptive_margin: 5
 horizontal_move_z: 1
 algorithm: bicubic
 bicubic_tension: 0.2
-mesh_min : 20, 25
+mesh_min : 30, 30
 mesh_max : 300, 280
 mesh_pps: 0
 move_check_distance: 3
