--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -22,24 +22,25 @@
 #     G1 Y10 F1000
 #     G90  ; Absolute positioning
 #     G1 X5 Y5 Z2 F3000  ; Move back to home or another safe position (adjust as needed)
-[gcode_macro RESPOND]
-rename_existing: RESPOND_ORIG
-# toggle speaking without removing the macro
-variable_speak_enable: 1
-gcode:
-  {% set msg = params.MSG|default("") %}
-  {% set type = params.TYPE|default("") %}
-  {% set prefix = params.PREFIX|default("") %}
 
-  # Pass through to the original RESPOND (preserves behavior)
-  RESPOND_ORIG {% if type %}TYPE={type}{% endif %} {% if prefix %}PREFIX={prefix}{% endif %} MSG="{msg}"
+# [gcode_macro RESPOND]
+# rename_existing: RESPOND_ORIG
+# # toggle speaking without removing the macro
+# variable_speak_enable: 1
+# gcode:
+#   {% set msg = params.MSG|default("") %}
+#   {% set type = params.TYPE|default("") %}
+#   {% set prefix = params.PREFIX|default("") %}
 
-  # Also speak it (if enabled)
-  {% if printer["gcode_macro RESPOND"].speak_enable|int %}
-    # Basic sanitizing to avoid quote issues
-    {% set speak_msg = msg|replace('"','') %}
-    SPEAK MSG="{speak_msg}"
-  {% endif %}
+#   # Pass through to the original RESPOND (preserves behavior)
+#   RESPOND_ORIG {% if type %}TYPE={type}{% endif %} {% if prefix %}PREFIX={prefix}{% endif %} MSG="{msg}"
+
+#   # Also speak it (if enabled)
+#   {% if printer["gcode_macro RESPOND"].speak_enable|int %}
+#     # Basic sanitizing to avoid quote issues
+#     {% set speak_msg = msg|replace('"','') %}
+#     SPEAK MSG="{speak_msg}"
+#   {% endif %}
 
 [gcode_macro PRINT_START]
 gcode:
@@ -249,6 +250,7 @@ gcode:
   SET_FAN_SPEED FAN=RSCS SPEED=0
   RESPOND MSG="Finished!"
 
+
 # [gcode_macro spin_one_stepper]
 # gcode:
 #   {% set stepper = params.STEPPER|string %}
@@ -303,6 +305,7 @@ gcode:
     G1 X120 Y270 F1000      ; move head to back
     CLEAR_PAUSE
     M106 S0                 ; stop fan
+    SET_FAN_SPEED FAN=RSCS SPEED=0.0
     # SDCARD_RESET_FILE
     BASE_CANCEL_PRINT
 
@@ -796,4 +799,80 @@ gcode:
 gcode:
     PAUSE
     SPEAK MSG="PAUSE. PAUSE. PAUSE."
-    
+
+
+# 1) A reusable delayed loop that decrements remaining seconds
+[delayed_gcode _dry_bed_tick]
+gcode:
+  {% set remain = printer["gcode_macro DRY_FILAMENT"].remaining|int %}
+  {% set bed    = printer["gcode_macro DRY_FILAMENT"].bed_temp|int %}
+  {% set orig   = printer["gcode_macro DRY_FILAMENT"].orig_idle|int %}
+
+  {% if remain > 0 %}
+    # Keep target; small periodic message to keep things "active"
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bed}
+    M117 Drying {remain//3600}h{(remain%3600)//60}m left @ {bed}°C
+    RESPOND MSG="Drying: {remain//3600}h {(remain%3600)//60}m left @ {bed}°C"
+    # Decrement and schedule next tick in 60s
+    SET_GCODE_VARIABLE MACRO=DRY_FILAMENT VARIABLE=remaining VALUE={remain - 60}
+    UPDATE_DELAYED_GCODE ID=_dry_bed_tick DURATION=60
+  {% else %}
+    # Done: turn bed off, restore idle timeout, announce
+    M140 S0
+    SET_IDLE_TIMEOUT TIMEOUT={orig}
+    SPEAK MSG="Dry complete"
+    M117 Dry complete
+    RESPOND MSG="Dry complete. Bed off. Idle timeout restored."
+  {% endif %}
+
+
+[gcode_macro DRY_FILAMENT]
+description: Home if needed, park, heat bed to dry filament, wait HOURS, notify done
+gcode:
+  {% set BED_TEMP = params.BED_TEMP|default(90)|int %}
+  {% set HOURS    = params.HOURS|default(8)|int %}
+  {% set X_PARK   = params.X|default(150)|float %}
+  {% set Z_PARK   = params.Z|default(100)|float %}
+
+  # compute Y max from config
+  {% set Y_MAX = printer.configfile.config["stepper_y"]["position_max"]|float %}
+
+  # derive wait seconds and a comfy idle timeout
+  {% set WAIT_S = HOURS * 3600 %}
+  {% set NEW_IDLE = WAIT_S + 900 %}  # +15 min cushion
+  {% set ORIG_IDLE = printer.configfile.settings.idle_timeout.timeout|int %}
+
+  # 1) Home if not already
+  {% if "xyz" not in printer.toolhead.homed_axes|string %}
+    RESPOND MSG="Homing axes…"
+    G28
+  {% endif %}
+
+  # 2) Set Z=200 (or user override) and 3) park X=150, Y=max
+  G90
+  RESPOND MSG="Parking head for drying..."
+  G1 Z{Z_PARK} F1800
+  G1 X{X_PARK} Y{Y_MAX - 5.0} F6000
+
+  M84
+  # Extend idle timeout so long wait won't trigger shutdown; remember original
+  SET_IDLE_TIMEOUT TIMEOUT={NEW_IDLE}
+
+  # 4) Heat bed
+  RESPOND MSG="Heating bed to {BED_TEMP}℃ for {HOURS}h…"
+  M140 S{BED_TEMP}
+  M117 Heating bed to {BED_TEMP}°C
+  M190 S{BED_TEMP}  ; wait to reach temp
+
+  # 5) Show message to place filament
+  SPEAK MSG="Put filament on bed to dry"
+  RESPOND MSG="Put filament on bed to dry"
+  M117 Put filament on bed to dry
+
+  # 5) Start 1-minute ticking loop instead of a single long G4
+  RESPOND MSG="Holding {BED_TEMP}℃ for {HOURS}h…"
+  UPDATE_DELAYED_GCODE ID=_dry_bed_tick DURATION=60
+  M84
+
+
+
