--- a/new_config/sound.cfg
+++ b/new_config/sound.cfg
@@ -1,9 +1,8 @@
 [gcode_shell_command SPEAK_TEXT]
 command = python3 /home/lianxu/vzbot/sound/speak.py
 timeout = 5.0
-verbose: True
+verbose: False
 
 [gcode_macro SPEAK]
 gcode:
   RUN_SHELL_COMMAND CMD=SPEAK_TEXT PARAMS="{params.MSG|default('Hello World')}"
-
