--- a/new_config/macro.cfg
+++ b/new_config/macro.cfg
@@ -41,6 +41,7 @@
 #     {% set speak_msg = msg|replace('"','') %}
 #     SPEAK MSG="{speak_msg}"
 #   {% endif %}
+# moonraker.conf
 
 [gcode_macro PRINT_START]
 gcode:
@@ -800,32 +801,6 @@ gcode:
     PAUSE
     SPEAK MSG="PAUSE. PAUSE. PAUSE."
 
-
-# 1) A reusable delayed loop that decrements remaining seconds
-[delayed_gcode _dry_bed_tick]
-gcode:
-  {% set remain = printer["gcode_macro DRY_FILAMENT"].remaining|int %}
-  {% set bed    = printer["gcode_macro DRY_FILAMENT"].bed_temp|int %}
-  {% set orig   = printer["gcode_macro DRY_FILAMENT"].orig_idle|int %}
-
-  {% if remain > 0 %}
-    # Keep target; small periodic message to keep things "active"
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bed}
-    M117 Drying {remain//3600}h{(remain%3600)//60}m left @ {bed}°C
-    RESPOND MSG="Drying: {remain//3600}h {(remain%3600)//60}m left @ {bed}°C"
-    # Decrement and schedule next tick in 60s
-    SET_GCODE_VARIABLE MACRO=DRY_FILAMENT VARIABLE=remaining VALUE={remain - 60}
-    UPDATE_DELAYED_GCODE ID=_dry_bed_tick DURATION=60
-  {% else %}
-    # Done: turn bed off, restore idle timeout, announce
-    M140 S0
-    SET_IDLE_TIMEOUT TIMEOUT={orig}
-    SPEAK MSG="Dry complete"
-    M117 Dry complete
-    RESPOND MSG="Dry complete. Bed off. Idle timeout restored."
-  {% endif %}
-
-
 [gcode_macro DRY_FILAMENT]
 description: Home if needed, park, heat bed to dry filament, wait HOURS, notify done
 gcode:
@@ -853,11 +828,7 @@ gcode:
   RESPOND MSG="Parking head for drying..."
   G1 Z{Z_PARK} F1800
   G1 X{X_PARK} Y{Y_MAX - 5.0} F6000
-
-  M84
-  # Extend idle timeout so long wait won't trigger shutdown; remember original
-  SET_IDLE_TIMEOUT TIMEOUT={NEW_IDLE}
-
+  
   # 4) Heat bed
   RESPOND MSG="Heating bed to {BED_TEMP}℃ for {HOURS}h…"
   M140 S{BED_TEMP}
@@ -871,8 +842,35 @@ gcode:
 
   # 5) Start 1-minute ticking loop instead of a single long G4
   RESPOND MSG="Holding {BED_TEMP}℃ for {HOURS}h…"
-  UPDATE_DELAYED_GCODE ID=_dry_bed_tick DURATION=60
-  M84
+  RUN_SHELL_COMMAND CMD=LED_SET PARAMS="dry_hour={HOURS}"
 
 
+[gcode_macro DRY_PLA]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=66
 
+[gcode_macro DRY_TPU]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=66
+
+[gcode_macro DRY_PETG]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=74
+
+[gcode_macro DRY_ABS]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=90
+  
+[gcode_macro DRY_ABS_GF]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=99
+
+[gcode_macro DRY_ABS_CF]
+description: dry pla filament
+gcode:
+  DRY_FILAMENT BED_TEMP=99
